--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
       <a href="/login" class="main-btn"><%=login %></a>
       <a href="/menu" class="main-btn">메뉴</a>
       <a href="/basket" class="main-btn"><%=basket %></a>
+      <a href="/admin" class="main-btn"><%= admin %></a>
     </div>
   </body>
 </html>
