--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,5 +11,6 @@
             <input type="text" placeholder="비밀번호" name="userpw"><br>
             <button type="submit" value="로그인">로그인</button>
         </form>
+        <a href="/" class="main-btn">처음화면으로 돌아가기</a>
     </body>
     </html>
