--- a/views/menudetail.ejs
+++ b/views/menudetail.ejs
@@ -36,5 +36,6 @@
         <p>현금</p>
         <input type="checkbox"  name="cash" value="cash">
     </form>
+    <a href="/" class="main-btn">처음화면으로 돌아가기</a>
 </body>
 </html>
