--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -10,19 +10,29 @@
         <button type="submit">주문하기</button><br>
         <% for (let i=0; i< basket.length; i++) { %>
         <tr>
-            <input type="hidden" name="basket" value = "<%= JSON.stringify(basket) %>"/>
+            <% let menu=[] %>
+            <% menu = basket[i][0] %>
             <td><%= i+1 %>번항목 :</td>
             <td><%= basket[i][0].menuid %></td>
             <td><%= basket[i][0].menuname %></td>
             <td><%= basket[i][0].menuprice %></td>
             <td><%= basket[i][0].menuclass %></td>
-            <td> <button type="submit">메뉴 삭제</button><br></td>
+            <!-- <td> <button type="submit">메뉴 삭제</button><br></td> -->
         </tr>
+        <input type="hidden" name="menuid" value = "<%= basket[i][0].menuid %>"/>
+        <input type="hidden" name="menuname" value = "<%= basket[i][0].menuname %>"/>
+        <input type="hidden" name="menuprice" value = "<%= basket[i][0].menuprice %>"/>
+        <input type="hidden" name="menuclass" value = "<%= basket[i][0].menuclass %>"/>
+
             <% } %>
+            
+
+
         <p>신용카드</p>
         <input type="checkbox"  name="creditcard" value="creditcard">
         <p>현금</p>
         <input type="checkbox"  name="cash" value="cash">
     </form>
+    <a href="/" class="main-btn">처음화면으로 돌아가기</a>
 </body>
 </html>
