--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,5 +10,6 @@
         <input type="text" placeholder="이름" name="username"><br>
         <button type="submit" value="회원가입">회원가입</button>
     </form>
+    <a href="/" class="main-btn">처음화면으로 돌아가기</a>
 </body>
 </html>
