--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
       <a href="/menu" class="main-btn">메뉴</a>
       <a href="/basket" class="main-btn"><%=basket %></a>
       <a href="/admin" class="main-btn"><%= admin %></a>
+      <a href="/orderpage" class="main-btn"><%= orderlist %></a>
     </div>
   </body>
 </html>
