--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -25,6 +25,11 @@
         <button type="submit">검색</button>
     </form>
     </table><br>
+    <p> 추천 메뉴 : <%= recmenu[0] %></p>
+    <p> 대표 메뉴 : <%= spemenu[0] %></p>
+    <p> 베스트 메뉴 1번: <%= bestmenu2[0] %></p>
+    <p> 베스트 메뉴 2번: <%= bestmenu2[1] %></p>
     <a href="/" class="main-btn">처음화면으로 돌아가기</a>
+    
 </body>
 </html>
