--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,6 +8,8 @@
         <input type="text" placeholder="아이디" name="userid"><br>
         <input type="text" placeholder="비밀번호" name="userpw"><br>
         <input type="text" placeholder="이름" name="username"><br>
+        <input type="text" placeholder="주소" name="userpw"><br>
+        <input type="text" placeholder="휴대폰번호" name="username"><br>
         <button type="submit" value="회원가입">회원가입</button>
     </form>
     <a href="/" class="main-btn">처음화면으로 돌아가기</a>
